@@ -1,6 +1,7 @@
+package CGI::Switch;
 use CGI;
 
-$VERSION = '1.00';
+$VERSION = '1.01';
 
 1;
 
